--- a/API-LX/API-LX/bin/API-LX.dll.config
+++ b/API-LX/API-LX/bin/API-LX.dll.config
@@ -13,6 +13,19 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	  <!-- Key -->
+	  <add key="secretKey" value="*#S%%M5KsRV#ap" />
+	  <!-- EndKey -->
+	  <!-- Enviroment -->
+	  <add key="Environment" value="LOCAL" />
+	  <!-- End Enviroment -->
+	  <!-- Token -->
+	  <add key="JWT_SECRET_KEY" value="BUGLArnfWeKpSQ2nwfqUqWZXe5pzzNbd" />
+	  <add key="JWT_EXPIRE_MINUTES" value="1440" />
+	  <!-- End Token --> 
+	  
+	  
+	  
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
