--- a/Web-LX/Web-LX/Web-LX.csproj
+++ b/Web-LX/Web-LX/Web-LX.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CarrosController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\FacturasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -769,11 +770,14 @@
     <Content Include="Views\User\EditUser.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\VerUsuarios.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Carros\VerCarros.cshtml" />
+    <Content Include="Views\Shared\_Layout - Copia.cshtml" />
+    <Content Include="Views\Shared\_Layout_Administration.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Admin\" />
-    <Folder Include="Views\Carros\" />
+    <Folder Include="Views\Facturas\" />
     <Folder Include="Views\Status\" />
   </ItemGroup>
   <ItemGroup>
